--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,7 @@
 # backend/.env
 NODE_ENV=production
 PORT=5000
+FRONTEND_URL=https://www.flexhunt.co
 PAYPAL_CLIENT_ID=Ael-tHA9_mkr9yKohQV7M3O_LUq7ZfHAAA002cENIRptQc15oNItGBYhkXV0JHFoiTIeRz6F6apyUec2
 PAYPAL_CLIENT_SECRET=EP82CVj3Jiz7k133qc8RMWgv0e-z2DJuq4xezjQTZg_lo_GaNQUr4GyoG7VJXK69FZ6sW75BrxkLaw2s
 FIREBASE_TYPE="service_account"
