--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 # backend/.env
-NODE_ENV=production
+NODE_ENV=development
 PORT=5000
 FRONTEND_URL=https://www.flexhunt.co
 PAYPAL_CLIENT_ID=Ael-tHA9_mkr9yKohQV7M3O_LUq7ZfHAAA002cENIRptQc15oNItGBYhkXV0JHFoiTIeRz6F6apyUec2
